<resources>
    <string name="app_name">Loco</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_name">Enter name!</string>
    <string name="enter_password">Enter password!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="btn_link_to_register">Not a member? Sign up for Loco now!</string>
    <string name="btn_link_to_login">Already a member? Login Here!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot your password? No worries!</string>
    <string name="forgot_password_msg">We just need your registered email to send you password reset instructions.</string>
    <string name="welcome">Welcome to Loco!</string>
    <string name="description">Loco is a location-driven app that allows you to check the happiness level, the pictures taken, the messages posted, and the events happening at YOUR location! \n \n Have fun using Loco!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="signed_in_as">You are signed in as: </string>
    <string name="takepicture">Add your picture here!</string>
    <string name="home">Home</string>
    <string name="location">Happiness Rating</string>
    <string name="photos">Latest Photos</string>
    <string name="posts">Latest Posts</string>
    <string name="event">Events</string>
    <string name="facts">Facts</string>
    <string name="signout">Sign-Out</string>
    <string name="profile"> My Profile</string>
    <string name="latest">Latest Activity!</string>
    <string name="more">VIEW ALL</string>
    <string name="thingsshared">Things you shared!</string>
    <string name="sharebtn">Share!</string>
    <string name="sharetext">Jot down what\'s on your mind</string>
    <string name="photostitle">Photos shared here!</string>
    <string name="photostitle_ind">Photos you shared!</string>
    <string name="poststitle">Posts shared here!</string>
    <string name="poststitle_ind">Posts you shared!</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="getuser">Getting user info!</string>
    <string name="confirmation">Confirm your rating</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
