<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/username_prompt"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/signed_in_as"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usersharedtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_msg"
            android:layout_marginTop="10dp"
            android:text="@string/thingsshared" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cvphotos"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/latestactivity"
            android:layout_marginTop="2dip"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/photoscv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/photos"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/photo1"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/photoscv"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/photo2"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/photoscv"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/photo1"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/photo3"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/photoscv"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/photo2"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/checkpics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/more"
                    android:clickable="true"
                    android:onClick="onMorePhotosClick"
                    android:textSize="10sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cvposts"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/cvphotos"
            android:layout_marginTop="2dip"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/postscv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/posts"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/post1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/postscv"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:id="@+id/post2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/post1" />

                <TextView
                    android:id="@+id/post3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/post2" />


                <TextView
                    android:id="@+id/checkposts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/more"
                    android:clickable="true"
                    android:onClick="onMorePostsClick"
                    android:textSize="10sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!--<ImageView-->
        <!--android:id="@+id/picture"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center"-->
        <!--android:onClick="pictureClick"/>-->

        <!--<TextView-->
        <!--android:id="@+id/addpicture"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:onClick="pictureClick"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:text="@string/takepicture"-->
        <!--android:layout_gravity="center_horizontal"/>-->

        <Button
            android:id="@+id/sign_out"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_sign_out"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
