<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_location"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="android.duke290.com.loco.MainActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/start_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/latestactivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/latest"
            android:layout_below="@+id/location_msg"
            />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cvphotos"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/latestactivity"
            android:layout_marginTop="2dip"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/photoscv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/photos"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/photo1"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/photoscv"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/photo2"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/photoscv"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/photo1"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/photo3"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/photoscv"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/photo2"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/checkpics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/more"
                    android:textSize="10sp"
                    android:onClick="onMorePhotosClick"
                    android:clickable="true"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cvposts"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/cvphotos"
            android:layout_marginTop="2dip"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/postscv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/posts"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/post1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/postscv"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:id="@+id/post2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/post1" />

                <TextView
                    android:id="@+id/post3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/post2" />

                <TextView
                    android:id="@+id/post4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/post3" />

                <TextView
                    android:id="@+id/checkposts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/more"
                    android:textSize="10sp"
                    android:onClick="onMorePostsClick"
                    android:clickable="true"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/process_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="process message"
            android:layout_below="@+id/cvposts"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="onMorePhotosClick"
            android:clickable="true"/>

        <Button
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="shareClick"
            android:text="@string/sharebtn"
            android:layout_below="@+id/process_msg" />

        <fragment
            android:id="@+id/start_location_fragment"
            android:name="android.duke290.com.loco.LocationFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="27dp" />


    </RelativeLayout>
</ScrollView>