<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.duke290.com.loco.discover.DiscoverFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <!-- Happiness CardView -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/happinesscv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/locationcv"
    android:layout_marginTop="1dp"
    card_view:cardCornerRadius="0dp"
    card_view:cardElevation="1dp"
    card_view:cardUseCompatPadding="false">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="16dp">

    <TextView
    android:id="@+id/rating_msg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:text="No rating yet :( "
    android:textSize="20sp"
    android:layout_gravity="center_vertical"/>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/rating_msg"
    android:layout_marginTop="8dp"
    android:orientation="horizontal">


    <ImageView
    android:id="@+id/rating_faces"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:adjustViewBounds="true"
    android:scaleType="fitXY"
    android:layout_gravity="center_vertical"/>

    <TextView
    android:id="@+id/num_ratings"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:text=""
    android:textSize="14sp"
    android:layout_gravity="center_vertical"/>
    </LinearLayout>
    </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!-- PHOTOS -->
    <TextView
    android:id="@+id/photos_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/happinesscv"
    android:padding="16dp"
    android:text="@string/photos"
    android:textColor="@color/gray"
    android:textSize="20sp" />

    <!-- Photos CardView -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/photoscv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/photos_header"
    android:layout_margin="0dp"
    card_view:cardCornerRadius="0dp"
    card_view:cardElevation="1dp"
    card_view:cardUseCompatPadding="false">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <android.support.v7.widget.RecyclerView
    android:id="@+id/photos_recycler_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_weight="1" />

    <Button
    android:id="@+id/checkpics"
    android:layout_width="wrap_content"
    android:layout_height="36dp"
    android:layout_alignParentEnd="true"
    android:layout_below="@+id/photos_recycler_view"
    android:layout_margin="0dp"
    android:background="?attr/selectableItemBackground"
    android:onClick="onMorePhotosClick"
    android:padding="8dp"
    android:text="@string/more"
    android:textColor="@color/colorAccent"
    android:textSize="14sp" />
    </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!-- POSTS -->
    <TextView
    android:id="@+id/posts_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/photoscv"
    android:padding="16dp"
    android:text="@string/posts"
    android:textColor="@color/gray"
    android:textSize="20sp" />

    <!-- Posts CardView -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvposts"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/posts_header"
    android:layout_margin="0dp"
    card_view:cardCornerRadius="0dp"
    card_view:cardElevation="1dp"
    card_view:cardUseCompatPadding="false">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <android.support.v7.widget.RecyclerView
    android:id="@+id/posts_recycler_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_weight="1" />

    <Button
    android:id="@+id/checkposts"
    android:layout_width="wrap_content"
    android:layout_height="36dp"
    android:layout_alignParentEnd="true"
    android:layout_below="@id/posts_recycler_view"
    android:layout_margin="0dp"
    android:background="?attr/selectableItemBackground"
    android:onClick="onMorePostsClick"
    android:padding="8dp"
    android:text="@string/more"
    android:textColor="@color/colorAccent"
    android:textSize="14sp" />
    </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!-- Empty Cardview for extra padding on bottom -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/empty"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/cvposts"
    android:layout_margin="0dp"
    card_view:cardCornerRadius="0dp"
    card_view:cardUseCompatPadding="false">

    <TextView
    android:id="@+id/emptyContent"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="16dp" />
    </android.support.v7.widget.CardView>

    </RelativeLayout>

</FrameLayout>
